--- a/requirements.txt
+++ b/requirements.txt
@@ -1,106 +1,27 @@
-aniso8601==9.0.1
 anyio==3.5.0
-asgiref==3.4.1
-astroid==2.4.2
-attrs==21.2.0
-autopep8==1.5.7
-awscli==1.22.23
-backports.entry-points-selectable==1.1.1
-bcrypt==3.2.0
-beautifulsoup4==4.9.3
-boto3==1.18.20
-botocore==1.23.23
-certifi==2020.11.8
-cffi==1.15.0
-chardet==3.0.4
-click==8.0.1
-cobble==0.1.3
-colorama==0.4.3
-configparser==5.0.2
-crayons==0.4.0
-cryptography==36.0.1
-distlib==0.3.3
-Django==3.2.7
-dnspython==2.1.0
-docutils==0.15.2
-ecdsa==0.17.0
-email-validator==1.1.3
-fastapi==0.71.0
-filelock==3.4.0
-flake8==4.0.1
-Flask==1.1.2
-Flask-Cors==3.0.10
-flask-restplus==0.13.0
-greenlet==1.1.1
-gunicorn==19.3.0
-h11==0.12.0
+asgiref==3.5.0
+click==8.0.3
+fastapi==0.73.0
+greenlet==1.1.2
+h11==0.13.0
 httptools==0.3.0
-idna==2.10
-iniconfig==1.1.1
-isort==5.6.4
-itsdangerous==2.0.1
-Jinja2==3.0.1
-jmespath==0.10.0
-jsonschema==3.2.0
-lazy-object-proxy==1.4.3
-lxml==4.6.3
-mailjet-rest==1.3.4
-mammoth==1.4.18
-MarkupSafe==2.0.1
-mccabe==0.6.1
-neo4j==4.3.4
-numpy==1.21.2
-packaging==21.3
-pandas==1.3.3
-passlib==1.7.4
-pipenv==2021.11.23
-platformdirs==2.4.0
-pluggy==1.0.0
-posts==0.2.2
-psycopg2==2.9.1
-py==1.11.0
-pyasn1==0.4.8
-pycodestyle==2.8.0
-pycountry==22.1.10
-pycparser==2.21
-pycryptodome==3.10.1
+idna==3.3
+numpy==1.22.1
+pandas==1.4.0
+psycopg2==2.9.3
 pydantic==1.9.0
-pyflakes==2.4.0
-pylint==2.6.0
-pymongo==4.0.1
-pyparsing==3.0.6
-pyPodcastParser==2.0.0
-pyrsistent==0.18.0
-pytest==6.2.5
-pytest-asyncio==0.17.0
+PyJWT==2.3.0
 python-dateutil==2.8.2
-python-dotenv==0.19.0
-python-jose==3.3.0
-python-multipart==0.0.5
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.0
-rsa==4.7.2
-s3transfer==0.5.0
-scipy==1.7.3
-selenium==3.141.0
-six==1.15.0
-smart-open==5.1.0
+python-dotenv==0.19.2
+pytz==2021.3
+PyYAML==6.0
+six==1.16.0
 sniffio==1.2.0
-soupsieve==2.0.1
-SQLAlchemy==1.4.22
+SQLAlchemy==1.4.31
 SQLAlchemy-Utils==0.38.2
-sqlparse==0.4.2
 starlette==0.17.1
-toml==0.10.2
 typing_extensions==4.0.1
-urllib3==1.26.2
-uvicorn==0.16.0
+uvicorn==0.17.0.post1
 uvloop==0.16.0
-virtualenv==20.10.0
-virtualenv-clone==0.5.7
 watchgod==0.7
-webdriver-manager==3.4.2
 websockets==10.1
-Werkzeug==0.16.1
-wrapt==1.12.1
