--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 anyio==3.5.0
 asgiref==3.5.0
 attrs==21.4.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
 click==8.0.3
+cryptography==36.0.1
 fastapi==0.73.0
 greenlet==1.1.2
 h11==0.13.0
@@ -14,6 +18,7 @@ pandas==1.4.0
 pluggy==1.0.0
 psycopg2==2.9.3
 py==1.11.0
+pycparser==2.21
 pydantic==1.9.0
 PyJWT==2.3.0
 pyparsing==3.0.7
@@ -22,6 +27,7 @@ python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
 PyYAML==6.0
+requests==2.27.1
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.3.24
@@ -29,6 +35,7 @@ SQLAlchemy-Utils==0.38.2
 starlette==0.17.1
 toml==0.10.2
 typing_extensions==4.0.1
+urllib3==1.26.8
 uvicorn==0.17.0.post1
 uvloop==0.16.0
 watchgod==0.7
