--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ iniconfig==1.1.1
 numpy==1.22.1
 packaging==21.3
 pandas==1.3.0
+pdf2image==1.16.0
+Pillow==8.3.1
 pluggy==1.0.0
 psycopg2==2.9.3
 py==1.11.0
