--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.1'
 services:
   data_lake:
     container_name: data_lake
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
